# engr659-policy-directory

./: CMakeLists.txt  UseLATEX.cmake
data/: corpus-metadata.csv  generate-metadata.sh
data/text/: 10642998_active_20180122.txt  10643075_active_20070313.txt  10643076_active_20060117.txt  10643077_active_20151012.txt  10643078_active_20100303.txt  10643081_active_20150615.txt  10643096_active_20050324.txt  10643154_active_20050329.txt  10643161_active_20191001.txt  10643171_active_20050329.txt  10643172_active_20160902.txt  10643174_active_20050331.txt  10643541_active_20150429.txt  10643542_active_20191104.txt  10643543_active_20150429.txt  10643544_active_20180122.txt  10643546_active_20180122.txt  10643575_active_20180122.txt  10643646_active_20180418.txt  10643888_active_20060221.txt  10643901_active_20160218.txt  10643906_active_20050329.txt  10643907_active_20100525.txt  10643908_active_20180119.txt  10643909_active_20180122.txt  10643910_active_20100525.txt  10643911_active_20100205.txt  10643912_active_20180122.txt  10643913_active_20050331.txt  10644044_active_20140919.txt  10644049_active_20050331.txt  10644075_active_20050325.txt  10644077_active_20050329.txt  10644079_active_20160218.txt  10644084_active_20150217.txt  10644085_active_20190122.txt  10644086_active_20170619.txt  10644087_active_20160303.txt  10644088_active_20171128.txt  10644089_active_20160303.txt  (+662 more)
doc/: CMakeLists.txt  assignment-1a_b.tex  assignment-policy-keywords.tex  assignment-template.tex  pagerank-paper-review.tex  scribe-2020-02-27.tex  scribe-carla-2020-02-27.tex
include/: Corpus.hpp  Document.hpp  DocumentMetadata.hpp  File.hpp  Index.hpp  Math.hpp  NewlineTokenizer.hpp  PolicyTokenizer001.hpp  Tokenizer.hpp  WhitespaceTokenizer.hpp
include/baer/: Algorithm.hpp  String.hpp
scripts/: build.sh  install-hooks.sh  pre-commit.sh
src/: CMakeLists.txt  corpus.cpp  document.cpp  file.cpp  main.cpp
test/: CMakeLists.txt
test/data/: CMakeLists.txt  corpus-metadata.csv  generate-metadata.sh
test/data/tokenized/: 10643075_active_20070313.txt  10643076_active_20060117.txt  10643077_active_20151012.txt  10643078_active_20100303.txt
test/feature/: CMakeLists.txt
test/perf/: CMakeLists.txt  tokenizer.cpp
test/unit/: CMakeLists.txt  buildVectors.cpp  cppstandard.cpp  file.cpp
